share/k8s/echo-app/yaml/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  labels:
    app: echo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo-app
        image: echo-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6000
