share/k8s/echo-app/yaml/svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-svc-lb
spec:
  # 客户端产⽣的所有请求每次都指向同⼀个pod
  type: LoadBalancer
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 6000
      nodePort: 30008
