share/k8s/echo-app/yaml/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-svc-nodeport
spec:
  # 客户端产⽣的所有请求每次都指向同⼀个pod
  type: NodePort
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 6000
      nodePort: 30006
