share/k8s/echo-app/yaml/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
spec:
  # 客户端产⽣的所有请求每次都指向同⼀个pod
  sessionAffinity: ClientIP
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 6000
